2005-01-04  Paul Brook  <paul@codesourcery.com>

	* Makefile.am: Correct dependency for earmsymbian.c.
	* Makefile.in: Regenerate.

2004-12-28  Danny Smith  <dannysmith@users.sourceforge.net>

	* emultempl/pe.em (set_pe_subsystem): Change second arg to
	lang_add_entry to FALSE.

2004-12-23  Nick Clifton  <nickc@redhat.com>

	PR 600
	* emulparams/shelf.sh (.stack): Increase stack start address to
	0x300000.

2004-12-20  Nick Clifton  <nickc@redhat.com>

	* ldmain.c (main): Issue an error message if -static and -shared
	are used together.

2004-12-17  Jakub Jelinek  <jakub@redhat.com>

	* ldexp.h (exp_data_seg): Add min_base and maxpagesize fields.
	* ldexp.c (fold_binary) <case DATA_SEGMENT_ALIGN>: Initialize them.
	* ldlang.c (lang_size_sections): Use them to avoid wasting virtual
	address space at DATA_SEGMENT_ALIGN.  Fix computation of expected
	PT_GNU_RELRO segment end.

2004-12-14  P.J. Darcy  <darcypj@us.ibm.com>

	* configure.tgt: Add s390x-ibm-tpf support.

2004-12-16  Martin Kögler  <mkoegler@auto.tuwien.ac.at>

	* ldmisc.c (vfinfo): Handle the case where %B is passed a NULL
	BFD.

2004-12-07  Ben Elliston  <bje@gnu.org>

	* ldemul.h: Forward declare struct option.

2004-12-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* scripttempl/pe.sc (.data): Add .jcr subsection.

2004-11-30  Paul Brook  <paul@codesourcery.com>

	* emultempl/armelf.em: Ignore -p and -no-pipeline-knowledge.

2004-11-30  Tero Niemela  <tero_niemela@yahoo.com>

	* Makefile.am: Change LOCALEDIR to $(datadir)/share.
	* Makefile.in: Regenerate.

2004-11-26  Melissa Mears  <asterisk@graces.dricas.com>

	* emultempl/pe.em: Add --subsystem:xbox as well as
	--subsystem:%d.
	* ld.texinfo: (ld_options): Document acceptance of subsystem xbox
	and numeric subsystems.

2004-11-24  Alan Modra  <amodra@bigpond.net.au>

	* ldexp.c (fold_name): Correct PR 338 fix.

2004-11-19  Mark Mitchell  <mark@codesourcery.com>

	* Makefile.am (ALL_EMULATIONS): Add earmelf_linux_eabi.o.